        - implemented esc-seq. to switch locales (\033 ] 9 ; <locale> \007).
        - removed greek support.
        - allow NUL bytes (ctrl-@) to be entered even with XIM enabled.
        - correct cursor width if !focus.
        - fixed --enable-xgetdefault, reported by eduard bloch.
        - added manpage for rxvtc/rxvtd based on the one eduard block
          contributed.
        - many other minor bugfixes.

1.8  Mon Feb  2 20:09:18 CET 2004
	- almost total conversion to C++. Except for introducing
          new bugs, this should not change much.
        - fix and re-enable background pixmap and inherit pixmap support.
        - re-enabled multiple scrollbar support.
        - added plain scrollbar style and restored xterm scrollbar.
        - blinking and selections work slightly better now.
        - fix an error condition when rxvt receives more than one screenful
          of output. should occur with original rxvt, too, but very rarely.
          (I guess the code contains more surprises of this sort...)

1.7  Fri Jan 30 16:50:11 CET 2004
	- further cleanups.
        - never do last-minute-changes: restore ability to have
          color + bold ass high-intensity, and let the selection
          use reverse video, not _blink_.
        - remove OPTION_HC, at least temporarily. If you want it back,
          please drop me a note.

1.6  Fri Jan 30 00:34:01 CET 2004
	- cleanups, minor bugfixes.
        - blinking text.
        - normal text color + bold gets white text instead of
          normal text when colorBD is not set.
        (- support double-byte characters (by blocking).)
          was not implemented

1.5  Thu Jan 29 00:43:48 CET 2004
	- share io manager between rxvt-unicode and vpe
        - bugfix for --disable-utmp, reported by fefe himself
        - colors were sometimes not used correctly because
          parts of the code expected a monochrome display.
          reported by fefe